@@ -1,6 +1,11 @@
 Release history for Text::FormBuilder.
 
 0.07
+    * added a create_form exported method to "do the right
+      thing" in simple cases
+    * added parse_array method to parse an array of lines making
+      up a formspec
+    * inline field groups via the !group and !field directives
     * added write_script method to write a skeleton CGI
       script around the FormBuilder object
     
